--- a/elasticsearch6/Dockerfile
+++ b/elasticsearch6/Dockerfile
@@ -1,9 +1,12 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch-oss:6.1.1
 MAINTAINER datapunt@amsterdam.nl
 
+# Allow graceful waiting for ports and easier editing
+RUN yum install -y netcat vim
+RUN yum install -y openssh-clients
+
 COPY elasticsearch.yml /usr/share/elasticsearch/config/
 COPY logging.yml /usr/share/elasticsearch/config/
 COPY *.sh /bin/
 
-# Allow graceful waiting for ports and easier editing
-RUN yum install -y netcat vim
+
