--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update \
 
 RUN echo 'max_wal_size = 4GB' >> "/usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample"
 RUN echo 'shared_buffers = 4GB' >> "/usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample"
-RUN echo 'work_mem = 6GB' >> "/usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample"
+RUN echo 'work_mem = 200mb' >> "/usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample"
 RUN echo 'maintenance_work_mem = 3GB' >> "/usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample"
 RUN echo 'checkpoint_completion_target = 0.9' >> "/usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample"
 RUN echo 'fsync = off' >> "/usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample"
