Extra tools in docker image

--- a/elasticsearch5/Dockerfile
+++ b/elasticsearch5/Dockerfile
@@ -6,4 +6,7 @@ COPY logging.yml /usr/share/elasticsearch/config/
 COPY *.sh /bin/
 
 # Allow graceful waiting for ports and easier editing
-RUN apt-get update && apt-get install -y netcat vim
+RUN apt-get update \
+	&& apt-get install -y openssh-client wget netcat vim \
+	&& rm -rf /var/lib/apt/lists/*
+
