Revert "removed postgres9.6 and postgres11"
This reverts commit 47073a1d

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,11 @@ services:
     volumes:
       - "~/.ssh/datapunt.key:/root/.ssh/datapunt.key"
 
+  postgres11:
+    build: postgres11
+    volumes:
+      - "~/.ssh/datapunt.key:/root/.ssh/datapunt.key"
+
   python:
     build: python
 
