--- a/python/Dockerfile.3.8.1-slim-buster
+++ b/python/Dockerfile.3.8.1-slim-buster
@@ -9,7 +9,7 @@ WORKDIR /app
 RUN apt-get update \
  && apt-get dist-upgrade -y \
  && apt-get autoremove -y \
- && apt-get install -y \
+ && apt-get install --no-install-recommends -y \
         unzip \
         wget \
         dnsutils \
