--- a/python/Dockerfile.3.8.1-slim-buster
+++ b/python/Dockerfile.3.8.1-slim-buster
@@ -23,9 +23,19 @@ RUN apt-get update \
         libspatialite7 \
         libfreexl1 \
         libgeotiff2 \
+        libwebp6 \
         proj-bin \
+        mime-support \
+        gettext \
+        libwebpmux3 \
+        libwebpdemux2 \
+        libxml2 \
+        libfreetype6 \
+        libtiff5 \
  && rm -rf /var/lib/apt/lists/* /var/cache/debconf/*-old \
  && pip install --upgrade pip \
+ && echo "font/woff2    woff2" >> /etc/mime.types \
+ && echo "image/webp    webp"  >> /etc/mime.types \
  && mkdir /usr/local/share/ca-certificates/extras
 
 COPY adp_rootca.crt /usr/local/share/ca-certificates/extras/
