--- a/python/Dockerfile.3.8.1-slim-buster
+++ b/python/Dockerfile.3.8.1-slim-buster
@@ -2,7 +2,7 @@ FROM python:3.8.1-slim-buster
 
 MAINTAINER datapunt@amsterdam.nl
 
-ENV PYTHONUNBUFFERED 1 \
+ENV PYTHONUNBUFFERED=1 \
     PIP_NO_CACHE_DIR=off
 
 WORKDIR /app
