Add set of dockerfiles for python 3.10.9

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,5 +47,10 @@ services:
       context: python/
       dockerfile: Dockerfile.3.8-slim-buster
 
+  python3.10-slim-buster:
+    build:
+      context: python/
+      dockerfile: Dockerfile.3.10-slim-buster
+
   pointcloud:
     build: postgres_pointcloud
